force-app/main/default/objects/Medical_Note__c/fields/Note_Description__c.field-meta.xml
<CustomField>
    <fullName>Note_Description__c</fullName>
    <label>Note Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>