force-app/main/default/objects/Medical_Note__c/fields/Note_Title__c.field-meta.xml
<CustomField>
    <fullName>Note_Title__c</fullName>
    <label>Note Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>