force-app/main/default/objects/Medical_Note__c/listViews/Lead_Assignment_Queue_Medical_Note.listView-meta.xml
<ListView>
    <fullName>Lead_Assignment_Queue_Medical_Note</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Assignment Queue</label>
    <queue>Lead_Assignment_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>